Mostly automated refactor to change all URLs to URIs for added flexibility. Also, renamed all getAddress() methods that returned URL/URIs to getUri().